[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/menu/debugMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/bg2.png" type="Texture" id=2]
[ext_resource path="res://themes/menu.tres" type="Theme" id=3]
[ext_resource path="res://themes/debugMenu.tres" type="Theme" id=4]
[ext_resource path="res://fonts/segoeuisl40.fnt" type="BitmapFont" id=5]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 0.0
margin/right = -200.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="menuTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 40.0
text = "Menu de débug"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menusUnlockerTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 44.0
margin/right = 1920.0
margin/bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menus unlocker"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menusUnlocker" type="ScrollContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 67.0
margin/right = 1920.0
margin/bottom = 219.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/menusUnlocker"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="itemsGiverTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 223.0
margin/right = 1920.0
margin/bottom = 242.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Items giver"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="itemsGiver" type="ScrollContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 246.0
margin/right = 1920.0
margin/bottom = 398.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/itemsGiver"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="teleporterTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 402.0
margin/right = 1920.0
margin/bottom = 421.0
text = "Teleporter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="teleporter" type="ScrollContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 425.0
margin/right = 1920.0
margin/bottom = 577.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/teleporter"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="mapLocationsUnlockerTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 581.0
margin/right = 1920.0
margin/bottom = 600.0
text = "Map locations unlocker"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mapLocationsUnlocker" type="ScrollContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 604.0
margin/right = 1920.0
margin/bottom = 756.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/mapLocationsUnlocker"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="mapLocationsUnlockerTitle1" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 760.0
margin/right = 1920.0
margin/bottom = 779.0
text = "Hat unlocker"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hatUnlocker" type="ScrollContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 783.0
margin/right = 1920.0
margin/bottom = 935.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/hatUnlocker"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="encyclopediaUnlockerTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 939.0
margin/right = 1920.0
margin/bottom = 958.0
text = "Enyclopedia Unlocker"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="encyclopediaUnlocker" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 962.0
margin/right = 1920.0
margin/bottom = 991.0
alignment = 0

[node name="chapterUnlocker" type="LineEdit" parent="VBoxContainer/encyclopediaUnlocker"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 29.0
placeholder/text = "chapter"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="sectionUnlocker" type="LineEdit" parent="VBoxContainer/encyclopediaUnlocker"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 404.0
margin/bottom = 29.0
placeholder/text = "section"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="entryUnlocker" type="LineEdit" parent="VBoxContainer/encyclopediaUnlocker"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 408.0
margin/top = 0.0
margin/right = 608.0
margin/bottom = 29.0
placeholder/text = "entry"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="unlockButton" type="Button" parent="VBoxContainer/encyclopediaUnlocker"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 612.0
margin/top = 0.0
margin/right = 721.0
margin/bottom = 29.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Déverrouiller"
flat = false

[node name="gameStateButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 995.0
margin/right = 1920.0
margin/bottom = 1035.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "gameState"
flat = false

[node name="returnButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 1039.0
margin/right = 1920.0
margin/bottom = 1079.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Retour"
flat = false

[connection signal="pressed" from="VBoxContainer/gameStateButton" to="." method="_on_gameStateButton_pressed"]

[connection signal="pressed" from="VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]


